@@ -43,9 +43,9 @@ public class FormatDescriptionReader implements Serializable
 		desc.setLongName(items[2]);
 		desc.addMimeTypes(items[3]);
 		desc.addFileExtensions(items[4]);
-		desc.setOffset(new Integer(items[5]));
+		desc.setOffset(Integer.valueOf(items[5]));
 		desc.setMagicBytes(items[6]);
-		desc.setMinimumSize(new Integer(items[7]));
+		desc.setMinimumSize(Integer.valueOf(items[7]));
 		return desc;
 	}
 }
