@@ -54,10 +54,10 @@ private Double value;
       value = (Double) o;
     }
     else if (o instanceof Integer) {
-      value = new Double( ( (Integer) o).intValue());
+      value = Double.valueOf( ( (Integer) o).intValue());
     }
     else {
-      value = new Double(o + "");
+      value = Double.valueOf(o + "");
     }
     if (Double.isNaN(value.doubleValue())) {
       value = null;
@@ -72,7 +72,7 @@ private Double value;
   public Percentage(Integer d) {
     super(Property.PERCENTAGE_PROPERTY);
     if (d != null) {
-      value = new Double(d.intValue());
+      value = Double.valueOf(d.intValue());
     }
   }
 
@@ -82,7 +82,7 @@ private Double value;
    */
   public Percentage(int d) {
     super(Property.PERCENTAGE_PROPERTY);
-    value = new Double(d);
+    value = Double.valueOf(d);
   }
 
   /**
@@ -91,7 +91,7 @@ private Double value;
    */
   public Percentage(double d) {
     super(Property.PERCENTAGE_PROPERTY);
-    value = new Double(d);
+    value = Double.valueOf(d);
   }
 
   /**
@@ -101,7 +101,7 @@ private Double value;
    */
   public Percentage(double d, String subtype) {
     super(Property.PERCENTAGE_PROPERTY,subtype);
-    value = new Double(d);
+    value = Double.valueOf(d);
   }
 
   /**
@@ -112,7 +112,7 @@ private Double value;
     super(Property.PERCENTAGE_PROPERTY);
     try {
       if (d != null) {
-        value = new Double(d);
+        value = Double.valueOf(d);
       }
     }
     catch (Throwable t) {
